simple-service-gke.yml
apiVersion: v1
kind: Service
metadata:
  name: tst-api-java
  labels:
    app: tst-api-java
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: tst-api-java
